fixed, text alignement on about me page, and added a footer in contact me page

--- a/css/main.css
+++ b/css/main.css
@@ -635,12 +635,21 @@ button:hover {
 /* About Me */
 /* Travi */
 .aboutmep {
-    margin-bottom: -85px;
-    
+    position: absolute;
+    top: 6.7rem;
+    left: 20.5rem;
+
+    height: 5.8rem;
+    width: 39.6rem;
+    margin-top: 2rem;
 }
 
 
-
+.main-content-about-me {
+    display: inline-block;
+    margin-left: 12.6rem;
+    
+}
 
 
 .trav {
@@ -650,7 +659,7 @@ button:hover {
     display: flex;
     justify-content: center;
 
-    margin-block-start: 2.5em;
+    margin-block-start: 5.2em;
     margin-block-end: 2em;
     
 }
@@ -682,7 +691,10 @@ button:hover {
 
 .inside-form {
     padding: 30px;
+
+    margin-block-end: 2rem;
 }
+
 
 
 .input-holder {
